@@ -4,16 +4,16 @@
  */
 package org.hibernate.orm.test.jpa.cacheable.annotation;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 
-import jakarta.persistence.EntityManagerFactory;
 import jakarta.persistence.SharedCacheMode;
 
+import org.hibernate.boot.pipeline.internal.MappingResolutionResult;
+import org.hibernate.boot.pipeline.internal.BootstrapPipeline;
 import org.hibernate.boot.spi.MetadataImplementor;
 import org.hibernate.cfg.AvailableSettings;
-import org.hibernate.jpa.boot.internal.EntityManagerFactoryBuilderImpl;
-import org.hibernate.jpa.boot.spi.Bootstrap;
+import org.hibernate.jpa.boot.internal.PersistenceUnitInfoDescriptor;
 import org.hibernate.testing.orm.jpa.PersistenceUnitInfoAdapter;
 import org.hibernate.mapping.PersistentClass;
 import org.hibernate.testing.cache.CachingRegionFactory;
@@ -32,12 +32,13 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 @BaseUnitTest
 public class ConfigurationTest {
 
-	private EntityManagerFactory emf;
+	private MappingResolutionResult mappingResolutionResult;
 
 	@AfterEach
 	public void tearDown() {
-		if ( emf != null ) {
-			emf.close();
+		if ( mappingResolutionResult != null ) {
+			mappingResolutionResult.close();
+			mappingResolutionResult = null;
 		}
 	}
 
@@ -116,24 +117,22 @@ public class ConfigurationTest {
 		Map settings = ServiceRegistryUtil.createBaseSettings();
 		settings.put( AvailableSettings.JPA_SHARED_CACHE_MODE, mode );
 		settings.put( AvailableSettings.CACHE_REGION_FACTORY, CustomRegionFactory.class.getName() );
-		settings.put(
-				AvailableSettings.LOADED_CLASSES,
-				Arrays.asList(
-						ExplicitlyCacheableEntity.class,
-						ExplicitlyNonCacheableEntity.class,
-						NoCacheableAnnotationEntity.class
-				)
-		);
+		PersistenceUnitInfoAdapter adapter = new PersistenceUnitInfoAdapter() {
+			@Override
+			public List<String> getManagedClassNames() {
+				return List.of(
+						ExplicitlyCacheableEntity.class.getName(),
+						ExplicitlyNonCacheableEntity.class.getName(),
+						NoCacheableAnnotationEntity.class.getName()
+				);
+			}
+		};
 
-		PersistenceUnitInfoAdapter adapter = new PersistenceUnitInfoAdapter();
-
-		final EntityManagerFactoryBuilderImpl emfb = (EntityManagerFactoryBuilderImpl) Bootstrap.getEntityManagerFactoryBuilder(
-				adapter,
+		mappingResolutionResult = BootstrapPipeline.resolveMetadata(
+				new PersistenceUnitInfoDescriptor( adapter ),
 				settings
 		);
-
-		emf = emfb.build();
-		return emfb.getMetadata();
+		return mappingResolutionResult.metadata();
 	}
 
 	public static class CustomRegionFactory extends CachingRegionFactory {
