@@ -5,10 +5,9 @@
 package org.hibernate.orm.test.jpa.metagen.mappedsuperclass.embedded;
 
 import jakarta.persistence.EntityManagerFactory;
-import java.util.Arrays;
+import java.util.List;
 
 import org.hibernate.orm.test.jpa.TestingEntityManagerFactoryGenerator;
-import org.hibernate.cfg.AvailableSettings;
 
 import org.hibernate.testing.orm.junit.JiraKey;
 import org.hibernate.testing.orm.junit.BaseUnitTest;
@@ -25,9 +24,8 @@ public class MappedSuperclassWithEmbeddedTest {
 	@Test
 	@JiraKey( value = "HHH-5024" )
 	public void testStaticMetamodel() {
-		EntityManagerFactory emf = TestingEntityManagerFactoryGenerator.generateEntityManagerFactory(
-				AvailableSettings.LOADED_CLASSES,
-				Arrays.asList( Company.class )
+		EntityManagerFactory emf = TestingEntityManagerFactoryGenerator.generateEntityManagerFactoryForClasses(
+				List.of( Company.class )
 		);
 		try {
 			assertNotNull( Company_.id, "'Company_.id' should not be null)" );
